--- a/composer.json
+++ b/composer.json
@@ -15,9 +15,9 @@
     "require": {
         "php": ">=5.4.0",
         "symfony/config": "~2.3|~3.0",
-        "symfony/dependency-injection": "~2.3|~3.0",
-        "symfony/filesystem": "~2.3|~3.0",
-        "symfony/yaml": "~2.3|~3.0",
+        "symfony/dependency-injection": "~2.3|~3.0|~4.0|~5.0",
+        "symfony/filesystem": "~2.3|~3.0|~4.0|~5.0",
+        "symfony/yaml": "~2.3|~3.0|~4.0|~5.0",
         "twig/twig": "~1.16",
         "jakoch/phantomjs-installer": "3.0.0"
     },
